fix details-dropdown arrow issue on safari

--- a/src/main/css/components/form.css
+++ b/src/main/css/components/form.css
@@ -15,6 +15,10 @@ legend {
   @apply tw-border-neutral-300;
 }
 
+.details-dropdown_summary::-webkit-details-marker {
+  display: none;
+}
+
 .form-control,
 .tw-form-control,
 .details-dropdown_summary {
